# ABV_programmieren

./: ABV2_Python_Basics.ipynb  ABV3_PythonAdvanced.ipynb  ABV4_PythonAdvancedII.ipynb  ABV5_DataAnalysisI.ipynb  ABV6_DataAnalysisII_NEW.ipynb  ABV7_GenAI.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  buchungen_2025.csv  main.py  pyproject.toml
.ipynb_checkpoints/: ABV2_Python_Basics-checkpoint.ipynb  ABV3_PythonAdvanced-checkpoint.ipynb  ABV4_PythonAdvancedII-checkpoint.ipynb  ABV5_DataAnalysisI-checkpoint.ipynb  ABV7_GenAI-checkpoint.ipynb
ABV4_HA_Repo/: AUFGABE.md  main.py
ABV4_HA_Repo/app/: models.py  utils.py
ABV8_FastAPI/: AUFGABE.md  database.py  main.py  models.py  seed.py
semesterprojekt/: .gitignore  AI_USAGE.md  README.md  pyproject.toml
semesterprojekt/backend/: analysis.py  database.py  main.py  schemas.py
semesterprojekt/frontend/: app.py
